# weme-v2

./: .env.example  .gitignore  README.md  TASK.md  pyproject.toml
config/: app.yaml  providers.yaml  rules.yaml
config/prompts/: reply.md  summarize.md  system.md
profiles/: USER.md
scripts/: build_macos_app.py  build_windows_exe.py
src/weme/: __init__.py  __main__.py  audit.py  batch.py  cli.py  clipboard.py  config.py  daemon.py  dashboard.py  defaults.py  knowledge.py  prompt.py  risk.py  sender.py  state.py  store.py  work_mode.py  workspace.py
src/weme/apps/: __init__.py  base.py  dingtalk.py  feishu.py  history_parser.py  registry.py  wechat.py
src/weme/core/: __init__.py  types.py
src/weme/memory/: __init__.py  engine.py  layers.py  summarizer.py
src/weme/platform/: __init__.py  base.py  factory.py  macos.py  windows.py
src/weme/providers/: __init__.py  anthropic.py  base.py  mock.py  openai_compat.py  router.py
tests/: __init__.py
tests/unit/: test_core.py
